--- a/ReferenceTableStyle.css
+++ b/ReferenceTableStyle.css
@@ -2,6 +2,17 @@ body {
     background-color: #E0E8EB;
 }
 
+#header {
+    text-align: center;
+    font-size: 3em;
+    background-color: white;;
+    color: rgb(40,40,40);
+    font-weight: bold;
+    border: 1px solid black;
+    margin: 40px 20px 20px 20px;
+    width: 100%;
+}
+
 table {
     width: 100%;
     margin: 20px;
