--- a/QuizStyle.css
+++ b/QuizStyle.css
@@ -79,7 +79,6 @@ body {
 
     border: 1px solid rgb(40,40,40);
     border-radius: 0px;
-    min-height: 60px;
 }
 
 .answer-button:hover {
@@ -91,5 +90,8 @@ body {
 @media only screen and (max-device-width: 736px) {
     button {
         min-height: 150px;
+    }
+    #prompt-frame {
+        height: 25%;
     }
 }
