--- a/QuizStyle.css
+++ b/QuizStyle.css
@@ -88,8 +88,12 @@ body {
 }
 
 @media only screen and (max-device-width: 736px) {
-    button {
+    #cheat-button {
+        min-height: 100px;
+    }
+    .answer-button {
         min-height: 150px !important;
+        font-size: 3em;
     }
     #prompt-frame {
         height: 25%;
