--- a/QuizStyle.css
+++ b/QuizStyle.css
@@ -108,7 +108,7 @@ body {
     #question {
         font-size: 3em;
     }
-    #questoin-counter {
+    #question-counter {
         font-size: 2.25em;
     }
 }
