--- a/QuizStyle.css
+++ b/QuizStyle.css
@@ -61,7 +61,7 @@ body {
     border-radius: 0px;
 }
 
-#cheat-button-hover:hover {
+.cheat-button-hover:hover {
     background-color: rgb(40,40,40);
     color: white;
     border: 1px solid rgb(40,40,40);
