--- a/QuizStyle.css
+++ b/QuizStyle.css
@@ -62,10 +62,8 @@ body {
 }
 
 .cheat-button-hover:hover {
-    background-color: rgb(40,40,40);
-    color: white;
-    border: 1px solid rgb(40,40,40);
-    border-radius: 0px;
+    background-color: rgb(40,40,40) !important;
+    color: white !important;
 }
 
 .answer-button {
